argocd/argocd-ingress-controller.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /   #new
  name: argocd-ingress
  namespace: argocd
spec:
  tls:
  - hosts:
    - argocd.gui.com
  rules:
  - host: argocd.gui.com
    http:
     paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 80
